# ClimateTemplate

./: .env.example  .gitignore  README.md  config.yaml  main.py  pyproject.toml  requirements.txt
clim4cast_imagegen/: __main__.py  cli.py
clim4cast_imagegen/core/: config.py  constants.py  exceptions.py  logging_conf.py  palette_types.py  pipeline.py
clim4cast_imagegen/io/: api.py  image_io.py  local_storage.py  raster_io.py  shp_io.py
clim4cast_imagegen/io/transport/: api.py  ftp.py  sftp.py
clim4cast_imagegen/services/: layout_engine.py  raster_processor.py  template_engine.py  visualizer.py
clim4cast_imagegen/utils/: palette_utils.py  pathname_utils.py
data/raster_tamplates/extent/: extent_operativa.tif
data/shapefiles/: country.dbf  country.shp  country.shx  country_domena.dbf  country_domena.shp  country_domena.shx  sea.dbf  sea.shp  sea.shx
src/: connection.py  constants.py  data_loader.py  data_processor.py  data_visualizer.py  enviroment.py  generator.py  logging_utils.py  process_raster.py  raster_utils.py  sftp_connection.py  workers.py
src/core/: config.py
src/io/: local_storage.py  shp_io.py
src/io/transport/: api.py
src/services/: layout_engine.py  raster_processor.py  template_engine.py  visualizer.py
src/transport/: api.py  ftp.py  sftp.py
src/utils/: palette_utils.py
tests/core/: test_palette_types.py
tests/io/: test_local_storage.py
tests/utils/: test_palette_utils.py  test_pathname_utils.py
