[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "clim4cast-imagegen"
version = "0.1.0"
description = "Pipeline that generates climate map images for the website"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp",
    "geopandas",
    "matplotlib",
    "numpy",
    "pillow",
    "pyproj",
    "python-dotenv",
    "pyyaml",
    "rasterio",
    "requests",
    "tqdm",
]

[tool.setuptools.packages.find]
include = ["clim4cast_imagegen*"]

[project.scripts]
clim4cast-imagegen = "clim4cast_imagegen.cli:run"

[project.optional-dependencies]
dev = ["pytest"]

[tool.pytest.ini_options]
testpaths = ["tests"]
